--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,14 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+<!-- Font Awesome 6 (latest) CDN from Cloudflare -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" integrity="sha512-TCwINivlOJYh1O6T+7M7O7Ih3xPqJHCSrQuz8NwZpY2KRmvE5PCrOPjcbyQ6R2sG4UEl/F3qL3pNMeKk1D/y9g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
 </head>
 <body>
   <app-root></app-root>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-tp6jvD0HOSIR5+vBy+ECryylZWHC9kctS1kpbvyzTKY9AYioz8z8bNQkr27Z+8nG" crossorigin="anonymous"></script>
+  <script src="https://kit.fontawesome.com/6f0740f9bd.js" crossorigin="anonymous"></script>
 </body>
 </html>
